--- a/app/src/main/res/layout/omikuji.xml
+++ b/app/src/main/res/layout/omikuji.xml
@@ -11,5 +11,5 @@
     <Button
             android:text="@string/bt_action"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/button"/>
+            android:layout_height="wrap_content" android:id="@+id/button" android:onClick="onButtonClick"/>
 </LinearLayout>
